--- a/public/style/subzero.css
+++ b/public/style/subzero.css
@@ -247,20 +247,22 @@ body {
 }
 
 .image-caption-subtitle-small {
-    color: #fff;
-    font-size: 12px;
+    color: #717171;
+    font-size: 9px;
     font-variation-settings:
         "slnt" 0,
         "wdth" 100,
         "GRAD" 0,
         "ROND" 100;
     padding: 12px 0 20px 15px;
+    max-width: 80%;
+    text-overflow: ellipsis;
 }
 
 .image-caption-title-small {
     color: #4B3A33;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 13px;
     font-variation-settings:
         "slnt" 0,
         "wdth" 100,
@@ -431,7 +433,8 @@ body {
 .flex-row {
     display: inline-flex;
     flex-direction: row;
-    padding: 12px;
+    padding: 12px 0 12px 0;
+    column-gap: 12px;
 }
 
 .column {
